syntax = "proto3";

package pb;

option go_package = "./protobuf";

import "google/protobuf/any.proto";

message HealthRequest {}
message HealthResponse {
  string status = 1;
  string message = 2;
}
